Fix HTML encoding issues and update title

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
 
 <nav id="app-nav" class="hidden">
-    <div style="font-weight: 800;"><i class="fas fa-car-side"></i> AUTODB </div>
+    <div style="font-weight: 800;"><i class="fas fa-car-side"></i> AUTO-DB </div>
     <div style="display:flex; gap:8px;">
         <button class="nav-btn active" id="btn-s" onclick="showT('s-tab')"><i class="fas fa-search"></i></button>
         <button class="nav-btn" id="btn-a" onclick="showT('a-tab')"><i class="fas fa-plus"></i></button>
@@ -278,4 +278,5 @@
     }
 </script>
 </body>
+
 </html>
